--- a/Index.html
+++ b/Index.html
@@ -26,6 +26,8 @@
         scene.background = new THREE.Color(skyColor);
         renderer.setClearColor(skyColor);
 
+        //comentario 
+
 
         //Aqui se crea la  mariposa /////////////////////////////////////////////////////////////////////
 
